--- a/notebooks/basic_random_forest_wp_model.ipynb
+++ b/notebooks/basic_random_forest_wp_model.ipynb
@@ -27,7 +27,9 @@
       "from sklearn.ensemble import RandomForestClassifier\n",
       "from sklearn.metrics import classification_report, roc_curve, auc, precision_recall_curve\n",
       "from sklearn.externals import joblib\n",
+      "from sklearn.cross_validation import train_test_split\n",
       "from sklearn.grid_search import RandomizedSearchCV\n",
+      "from sklearn.feature_selection import SelectKBest\n",
       "\n",
       "from scipy.stats import sem\n",
       "\n",
@@ -45,7 +47,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 31
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -74,7 +76,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -91,7 +93,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 33
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -106,7 +108,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 34
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -118,114 +120,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 35
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "features.head()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>qtr</th>\n",
-        "      <th>sec_adj</th>\n",
-        "      <th>sec_adj_sqrt</th>\n",
-        "      <th>dwn</th>\n",
-        "      <th>ytg</th>\n",
-        "      <th>yfog</th>\n",
-        "      <th>scorediff</th>\n",
-        "      <th>sprv</th>\n",
-        "      <th>ou</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td> 1</td>\n",
-        "      <td> 3592</td>\n",
-        "      <td> 0.016683</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 10</td>\n",
-        "      <td> 24</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 9.5</td>\n",
-        "      <td> 33.5</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td> 1</td>\n",
-        "      <td> 3571</td>\n",
-        "      <td> 0.016732</td>\n",
-        "      <td> 2</td>\n",
-        "      <td>  6</td>\n",
-        "      <td> 28</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 9.5</td>\n",
-        "      <td> 33.5</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td> 1</td>\n",
-        "      <td> 3535</td>\n",
-        "      <td> 0.016817</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 10</td>\n",
-        "      <td> 36</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 9.5</td>\n",
-        "      <td> 33.5</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td> 1</td>\n",
-        "      <td> 3501</td>\n",
-        "      <td> 0.016898</td>\n",
-        "      <td> 2</td>\n",
-        "      <td>  4</td>\n",
-        "      <td> 42</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 9.5</td>\n",
-        "      <td> 33.5</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td> 1</td>\n",
-        "      <td> 3474</td>\n",
-        "      <td> 0.016964</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 10</td>\n",
-        "      <td> 62</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 9.5</td>\n",
-        "      <td> 33.5</td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 36,
-       "text": [
-        "   qtr  sec_adj  sec_adj_sqrt  dwn  ytg  yfog  scorediff  sprv    ou\n",
-        "0    1     3592      0.016683    1   10    24          0   9.5  33.5\n",
-        "1    1     3571      0.016732    2    6    28          0   9.5  33.5\n",
-        "2    1     3535      0.016817    1   10    36          0   9.5  33.5\n",
-        "3    1     3501      0.016898    2    4    42          0   9.5  33.5\n",
-        "4    1     3474      0.016964    1   10    62          0   9.5  33.5"
-       ]
-      }
-     ],
-     "prompt_number": 36
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -237,7 +132,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 37
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -256,7 +151,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 38
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -415,7 +310,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 39,
+       "prompt_number": 9,
        "text": [
         "                qtr           min           sec          yfog           dwn           ytg     scorediff       teamwin       sec_adj  sec_adj_sqrt          sprv            ou\n",
         "count  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000  16015.000000\n",
@@ -429,7 +324,7 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -660,7 +555,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 40,
+       "prompt_number": 10,
        "text": [
         "                 gid            pid           dseq            len            qtr            min            sec           ptso           ptsd           timo           timd            dwn            ytg           yfog        sec_adj           sprv             ou        teamwin      scorediff   sec_adj_sqrt\n",
         "count  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000  423382.000000\n",
@@ -674,7 +569,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -702,7 +597,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 53
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -726,6 +621,14 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [
       "# Use this simplified version if you just want to explore a classifier.\n",
       "model_rf = RandomForestClassifier(oob_score = True, criterion = 'entropy', \n",
@@ -735,7 +638,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -749,7 +652,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 44,
+       "prompt_number": 13,
        "text": [
         "RandomForestClassifier(bootstrap=True, compute_importances=None,\n",
         "            criterion='entropy', max_depth=None, max_features=3,\n",
@@ -759,7 +662,7 @@
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -773,13 +676,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 45,
+       "prompt_number": 14,
        "text": [
         "0.81310022627320011"
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -793,13 +696,118 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 46,
+       "prompt_number": 15,
        "text": [
         "0.64939119575398063"
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 15
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from sklearn.decomposition import PCA\n",
+      "from sklearn.preprocessing import scale\n",
+      "pca = PCA(n_components=1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 25
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "new_features = pca.fit_transform(scale(features))\n",
+      "new_test_features = pca.transform(scale(test_features))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Use this simplified version if you just want to explore a classifier.\n",
+      "model_rf = RandomForestClassifier(oob_score = True, criterion = 'entropy', \n",
+      "                                          max_features = None, n_estimators = 30, min_samples_leaf = 50, \n",
+      "                                          random_state = 1)\n",
+      "model_rf.fit(new_features, target)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 27,
+       "text": [
+        "RandomForestClassifier(bootstrap=True, compute_importances=None,\n",
+        "            criterion='entropy', max_depth=None, max_features=None,\n",
+        "            min_density=None, min_samples_leaf=50, min_samples_split=2,\n",
+        "            n_estimators=30, n_jobs=1, oob_score=True, random_state=1,\n",
+        "            verbose=0)"
+       ]
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "evaluate_model(model_rf, new_features, target, new_test_features, test_target)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Training set score:  "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.604510820016\n",
+        "Test set score:  "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.527880112395\n",
+        "             precision    recall  f1-score   support\n",
+        "\n",
+        "          0       0.53      0.47      0.50      8047\n",
+        "          1       0.52      0.58      0.55      7968\n",
+        "\n",
+        "avg / total       0.53      0.53      0.53     16015\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "Confusion matrix: \n",
+        "Predicted     0     1\n",
+        "Actual               \n",
+        "0          3794  4253\n",
+        "1          3308  4660\n"
+       ]
+      }
+     ],
+     "prompt_number": 28
     },
     {
      "cell_type": "code",
